--- a/S06/json.merge.ipynb
+++ b/S06/json.merge.ipynb
@@ -138,15 +138,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Collect Values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# base"
+    "# map(lambda x: x['email'], base['players'].values())"
    ]
   },
   {
@@ -158,43 +165,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{u'10101665898917380': {'games': {u'random': u'-KGECAech_bBt1UlahvR'}, 'name': u'Dan Elias'}}\n",
-      "{u'10157050149995495': {'games': {u'dragon': u'-KGAL96FHYP2ImZ-PBET'}, 'name': u'Alejandro Anzola J\\xfcrgenson'}}\n",
-      "{u'10154140867945477': {'games': {u'essos': u'-KGCTbNVSS96R53-90v_'}, 'name': u'Dale Foo'}}\n",
-      "{u'10153503420116080': {'games': {u'essos': u'-KGA9a4ZuKQSO4Vmhoyb'}, 'name': u'Claudio Canzonetta'}}\n",
-      "{u'1325650077464216': {'games': {u'westeros': u'-KGDW-jMuwELhDMfrxF2'}, 'name': u'Janneke Vissers'}}\n",
-      "{u'10205575299374399': {'games': {u'essos': u'-KGCsDHhxFyweVLBC0AA'}, 'name': u'Krystyna Kosciuszko'}}\n",
-      "{u'10154208683986383': {'games': True, 'name': u'Kirsty Rose'}}\n",
-      "{u'10201492508270081': {'games': {u'essos': u'-KGDVzRCtFn0gSecFoQb'}, 'name': u'Ivar Posthumus'}}\n",
-      "{u'10156761991935328': {'games': True, 'name': u'Adrien Bordat'}}\n",
-      "{u'10154248140017994': {'games': {u'westeros': u'-KGDCPPxlYCo0VPXCoUW', u'dragon': u'-KGDUGdFlVurT0CFC4M9'}, 'name': u'Sherin Siew'}}\n",
-      "{u'10101666293431770': {'games': {u'essos': u'-KGBZs5uSsv9rOvR0VRu'}, 'name': u'Hayley Elias'}}\n",
-      "{u'10153481481492478': {'games': True, 'name': u'Lance Cheung'}}\n",
-      "{u'10153944209001609': {'games': {u'essos': u'-KGAIMzp4T5z6tLZH5pj'}, 'name': u'Kristin Low'}}\n",
-      "{u'10153747594878003': {'games': {u'essos': u'-KGA2N2hnOzVBCx_nygp'}, 'name': u'Kelvin Kung'}}\n",
-      "{u'10154221089427526': {'games': {u'essos': u'-KGBhEZkrU2wrw3GACwK'}, 'name': u'Patti Hunt'}}\n",
-      "{u'10101665762111540': {'games': {u'essos': u'-KGB1-QihLDlrpMj7xwZ'}, 'name': u'Hywel Carver'}}\n",
-      "{u'10156899416710714': {'games': {u'essos': u'-KGA4ENa6NKvWHU02_Yw'}, 'name': u'James Griffiths'}}\n",
-      "{u'10157044919110495': {'games': {u'westeros': u'-KGD89OLUQQoYKT9vz68', u'dragon': u'-KGD9vm5eldOWq2CLLaQ'}, 'name': u'Mart van de Ven'}}\n",
-      "{u'10100911652917320': {'games': {u'essos': u'-KGCqGalqpCs32QIslHN'}, 'name': u'Kai Okamura'}}\n",
-      "{u'10100288986712842': {'games': {u'essos': u'-KGAhjufgBl0BfaE-rQ8'}, 'name': u'Denis Tsoi'}}\n",
-      "{u'10153467798172019': {'games': {u'random': u'-KGD3BYXdsTrmMcOG5mG'}, 'name': u'Billy McCord'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for key, player in base['players'].iteritems():\n",
-    "    print {player['facebook'] : {'name' : player['full_name'], 'games' : player['games']}}"
+    "# for key, player in base['players'].iteritems():\n",
+    "#     print {player['facebook'] : {'name' : player['full_name'], 'games' : player['games']}}"
    ]
   },
   {
@@ -262,45 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{u'10101665898917380': {'house': {u'random': u'arryn'}, 'name': u'Dan Elias'}}\n",
-      "{u'10157050149995495': {'house': True, 'name': u'Alejandro Anzola J\\xfcrgenson'}}\n",
-      "{u'10154140867945477': {'house': {u'essos': u'arryn'}, 'name': u'Dale Foo'}}\n",
-      "{u'10153503420116080': {'house': True, 'name': u'Claudio Canzonetta'}}\n",
-      "{u'1325650077464216': {'house': {u'westeros': u'tyrell'}, 'name': u'Janneke Vissers'}}\n",
-      "{u'10205575299374399': {'house': {u'essos': u'meereen'}, 'name': u'Krystyna Kosciuszko'}}\n",
-      "{u'10154208683986383': {'house': True, 'name': u'Kirsty Rose'}}\n",
-      "{u'10201492508270081': {'house': {u'essos': u'nightswatch'}, 'name': u'Ivar Posthumus'}}\n",
-      "{u'10156761991935328': {'house': True, 'name': u'Adrien Bordat'}}\n",
-      "{u'10154248140017994': {'house': {u'westeros': u'stark', u'dragon': u'martell'}, 'name': u'Sherin Siew'}}\n",
-      "{u'10101666293431770': {'house': True, 'name': u'Hayley Elias'}}\n",
-      "{u'10153481481492478': {'house': True, 'name': u'Lance Cheung'}}\n",
-      "{u'10153944209001609': {'house': True, 'name': u'Kristin Low'}}\n",
-      "{u'10153747594878003': {'house': True, 'name': u'Kelvin Kung'}}\n",
-      "{u'10154221089427526': {'house': True, 'name': u'Patti Hunt'}}\n",
-      "{u'10101665762111540': {'house': True, 'name': u'Hywel Carver'}}\n",
-      "{u'10156899416710714': {'house': True, 'name': u'James Griffiths'}}\n",
-      "{u'10157044919110495': {'house': {u'westeros': u'independent', u'dragon': u'greyjoy'}, 'name': u'Mart van de Ven'}}\n",
-      "{u'10100911652917320': {'house': {u'essos': u'stark'}, 'name': u'Kai Okamura'}}\n",
-      "{u'10100288986712842': {'house': True, 'name': u'Denis Tsoi'}}\n",
-      "{u'10153467798172019': {'house': {u'random': u'lannister'}, 'name': u'Billy McCord'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for key, player in base['players'].iteritems():\n",
-    "    try:\n",
-    "        print {player['facebook'] : {'name' : player['full_name'], 'house' : player['house']}}\n",
-    "    except KeyError:\n",
-    "        print {player['facebook'] : {'name' : player['full_name'], 'house' : True}}\n",
+    "# for key, player in base['players'].iteritems():\n",
+    "#     try:\n",
+    "#         print {player['facebook'] : {'name' : player['full_name'], 'house' : player['house']}}\n",
+    "#     except KeyError:\n",
+    "#         print {player['facebook'] : {'name' : player['full_name'], 'house' : True}}\n",
     "        \n",
     "        "
    ]
