--- a/S06/fix-character-health.ipynb
+++ b/S06/fix-character-health.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -20,40 +20,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "base[u'character_health'] = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] < 55}"
+    "base[u'character_health'] = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] < 57}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "missions = {k:v for k,v in base[u'missions'].iteritems() if v['episode'] == '54'}"
+    "missions = {k:v for k,v in base[u'missions'].iteritems() if v['episode'] == '56'}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "character_health = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] == 54}"
+    "character_health = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] == 56}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -73,19 +73,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n",
-      "daenerystargaryen\n",
-      "SUCCESS\n",
+      "FAIL\n",
       "\n",
       "\n",
-      "0\n",
-      "tyrionlannister\n",
-      "SUCCESS\n",
+      "FAIL\n",
       "\n",
       "\n",
-      "100\n",
-      "daenerystargaryen\n",
-      "SUCCESS\n",
+      "FAIL\n",
+      "\n",
+      "\n",
+      "FAIL\n",
+      "\n",
+      "\n",
+      "FAIL\n",
+      "\n",
+      "\n",
+      "FAIL\n",
+      "\n",
+      "\n",
+      "FAIL\n",
       "\n",
       "\n",
       "FAIL\n",
@@ -109,27 +115,10 @@
       "FAIL\n",
       "\n",
       "\n",
-      "100\n",
-      "brienneoftarth\n",
-      "SUCCESS\n",
-      "\n",
-      "\n",
-      "100\n",
-      "aryastark\n",
-      "SUCCESS\n",
-      "\n",
-      "\n",
-      "0\n",
-      "aryastark\n",
-      "SUCCESS\n",
-      "\n",
-      "\n",
       "FAIL\n",
       "\n",
       "\n",
-      "100\n",
-      "tyrionlannister\n",
-      "SUCCESS\n",
+      "FAIL\n",
       "\n",
       "\n",
       "FAIL\n",
@@ -138,14 +127,7 @@
       "FAIL\n",
       "\n",
       "\n",
-      "100\n",
-      "wunwun\n",
-      "SUCCESS\n",
-      "\n",
-      "\n",
-      "100\n",
-      "jaqenhghar\n",
-      "SUCCESS\n",
+      "FAIL\n",
       "\n",
       "\n"
      ]
@@ -158,7 +140,7 @@
     "        l = m['league']\n",
     "        d = base['characters'][m['assassination_agent']]['violence']\n",
     "        try:\n",
-    "            v = base[u'character_health'][l+h+'54']['health']\n",
+    "            v = base[u'character_health'][l+h+'56']['health']\n",
     "            print v[m['assassination_target_character']]\n",
     "            print m['assassination_target_character']\n",
     "            v[m['assassination_target_character']] = max(v[m['assassination_target_character']] - damage[d], 0)\n",
@@ -171,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -183,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
