Ascension II Analytics

--- a/S06/fix-character-health.ipynb
+++ b/S06/fix-character-health.ipynb
@@ -8,11 +8,25 @@
    },
    "outputs": [],
    "source": [
+    "import qgrid\n",
     "import pprint\n",
     "import simplejson\n",
     "import pandas as pd\n",
+    "\n",
+    "\n",
     "from firebase import firebase\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "url = 'https://ascension.firebaseio.com'\n",
     "firebase = firebase.FirebaseApplication(url, None)\n",
     "base = firebase.get('/', None)"
