--- a/S06/fix-character-health.ipynb
+++ b/S06/fix-character-health.ipynb
@@ -26,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "base[u'character_health'] = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] < 57}"
+    "base[u'character_health'] = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] < 60}"
    ]
   },
   {
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "missions = {k:v for k,v in base[u'missions'].iteritems() if v['episode'] == '56'}"
+    "missions = {k:v for k,v in base[u'missions'].iteritems() if v['episode'] == '59'}"
    ]
   },
   {
@@ -48,7 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "character_health = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] == 56}"
+    "character_health = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] == 59}"
    ]
   },
   {
@@ -76,46 +76,37 @@
       "FAIL\n",
       "\n",
       "\n",
-      "FAIL\n",
+      "100\n",
+      "razdalmoeraz\n",
+      "SUCCESS\n",
+      "\n",
+      "\n",
+      "100\n",
+      "moro\n",
+      "SUCCESS\n",
+      "\n",
+      "\n",
+      "100\n",
+      "wunwun\n",
+      "SUCCESS\n",
+      "\n",
+      "\n",
+      "100\n",
+      "tyrionlannister\n",
+      "SUCCESS\n",
+      "\n",
+      "\n",
+      "0\n",
+      "moro\n",
+      "SUCCESS\n",
       "\n",
       "\n",
       "FAIL\n",
       "\n",
       "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
-      "\n",
-      "\n",
-      "FAIL\n",
+      "100\n",
+      "jonsnow\n",
+      "SUCCESS\n",
       "\n",
       "\n",
       "FAIL\n",
@@ -140,7 +131,7 @@
     "        l = m['league']\n",
     "        d = base['characters'][m['assassination_agent']]['violence']\n",
     "        try:\n",
-    "            v = base[u'character_health'][l+h+'56']['health']\n",
+    "            v = base[u'character_health'][l+h+'59']['health']\n",
     "            print v[m['assassination_target_character']]\n",
     "            print m['assassination_target_character']\n",
     "            v[m['assassination_target_character']] = max(v[m['assassination_target_character']] - damage[d], 0)\n",
@@ -165,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
