--- a/S06/scripts/fix-character-health.ipynb
+++ b/S06/scripts/fix-character-health.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -13,70 +13,178 @@
     "import simplejson\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
     "from firebase import firebase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 124,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "url = 'https://ascension.firebaseio.com'\n",
-    "firebase = firebase.FirebaseApplication(url, None)\n",
-    "base = firebase.get('/', None)"
+    "# url = 'https://ascension.firebaseio.com'\n",
+    "# firebase = firebase.FirebaseApplication(url, None)\n",
+    "# base = firebase.get('/', None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 127,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "essos stark\n",
+      "FAIL\n",
+      "\n",
+      "\n",
+      "dragon greyjoy\n",
+      "FAIL\n",
+      "\n",
+      "\n",
+      "westeros greyjoy\n",
+      "0\n",
+      "razdalmoeraz\n",
+      "SUCCESS\n",
+      "\n",
+      "\n",
+      "westeros independent\n",
+      "0\n",
+      "moro\n",
+      "SUCCESS\n",
+      "\n",
+      "\n",
+      "essos bolton\n",
+      "25\n",
+      "wunwun\n",
+      "SUCCESS\n",
+      "\n",
+      "\n",
+      "westeros independent\n",
+      "0\n",
+      "tyrionlannister\n",
+      "SUCCESS\n",
+      "\n",
+      "\n",
+      "westeros independent\n",
+      "0\n",
+      "moro\n",
+      "SUCCESS\n",
+      "\n",
+      "\n",
+      "essos lannister\n",
+      "FAIL\n",
+      "\n",
+      "\n",
+      "essos greyjoy\n",
+      "0\n",
+      "jonsnow\n",
+      "SUCCESS\n",
+      "\n",
+      "\n",
+      "dragon lannister\n",
+      "FAIL\n",
+      "\n",
+      "\n",
+      "westeros greyjoy\n",
+      "FAIL\n",
+      "\n",
+      "\n",
+      "westeros greyjoy\n",
+      "FAIL\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "base[u'character_health'] = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] < 61}"
+    "damage = [0,0,25,50,75,100]\n",
+    "\n",
+    "for n in range(59,60):\n",
+    "    EPISODE = n\n",
+    "    ERASE_GAME_EFFECTS = False\n",
+    "    \n",
+    "    missions = {k:v for k,v in base[u'missions'].iteritems() if v['episode'] == str(EPISODE)}\n",
+    "    character_health = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] == EPISODE}\n",
+    "    \n",
+    "    for k,m in missions.iteritems():\n",
+    "        if m['assassination_target_house']:\n",
+    "            h = m['assassination_target_house']\n",
+    "            l = m['league']\n",
+    "            d = base['characters'][m['assassination_agent']]['violence']\n",
+    "            if ERASE_GAME_EFFECTS:\n",
+    "                base[u'character_health'][l+h+str(EPISODE)] = base[u'character_health'][l+h+str(EPISODE-1)]\n",
+    "                base[u'character_health'][l+h+str(EPISODE)]['episode'] = EPISODE\n",
+    "            try:\n",
+    "                v = base[u'character_health'][l+h+str(EPISODE)]['health']\n",
+    "                print l, h\n",
+    "                print v[m['assassination_target_character']]\n",
+    "                print m['assassination_target_character']\n",
+    "                v[m['assassination_target_character']] = max(v[m['assassination_target_character']] - damage[d], 0)\n",
+    "                print 'SUCCESS'\n",
+    "            except:\n",
+    "                print 'FAIL'\n",
+    "\n",
+    "            print '\\n'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "missions = {k:v for k,v in base[u'missions'].iteritems() if v['episode'] == '60'}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "character_health = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] == 60}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
-    "damage = [0,0,25,50,75,100]"
+    "# base[u'character_health'] = {k:v for k,v in base[u'character_health'].iteritems() if v['episode'] <= EPISODE}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -85,12 +193,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n",
+      "0\n",
       "theongreyjoy\n",
       "SUCCESS\n",
       "\n",
       "\n",
-      "75\n",
+      "0\n",
       "aryastark\n",
       "SUCCESS\n",
       "\n",
@@ -124,7 +232,7 @@
       "FAIL\n",
       "\n",
       "\n",
-      "100\n",
+      "0\n",
       "aryastark\n",
       "SUCCESS\n",
       "\n",
@@ -137,12 +245,12 @@
       "FAIL\n",
       "\n",
       "\n",
-      "75\n",
+      "0\n",
       "osha\n",
       "SUCCESS\n",
       "\n",
       "\n",
-      "75\n",
+      "0\n",
       "qyburn\n",
       "SUCCESS\n",
       "\n",
@@ -178,27 +286,11 @@
      ]
     }
    ],
-   "source": [
-    "for k,m in missions.iteritems():\n",
-    "    if m['assassination_target_house']:\n",
-    "        h = m['assassination_target_house']\n",
-    "        l = m['league']\n",
-    "        d = base['characters'][m['assassination_agent']]['violence']\n",
-    "        try:\n",
-    "            v = base[u'character_health'][l+h+'60']['health']\n",
-    "            print v[m['assassination_target_character']]\n",
-    "            print m['assassination_target_character']\n",
-    "            v[m['assassination_target_character']] = max(v[m['assassination_target_character']] - damage[d], 0)\n",
-    "            print 'SUCCESS'\n",
-    "        except:\n",
-    "            print 'FAIL'\n",
-    "\n",
-    "        print '\\n'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -210,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -219,6 +311,15 @@
     "with open('/home/io/character-health-fix.json','w') as json_file:\n",
     "    simplejson.dump(base[u'character_health'], json_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -237,7 +338,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.0.0"
   }
  },
  "nbformat": 4,
